<resources>
    <string name="app_name">Quick Care</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="line01">Don\'t you have an account? Register.</string>
    <string name="line02">Nearby hospitals </string>
    <string name="search">Search</string>
    <string name="confirm_password">Confirm password</string>
    <string name="search02">Search your city here</string>
    <string name="btnlocation">Use Current Location</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="call_hospital">Call Hospital</string>
    <string name="edit_profile">Edit Your Profile</string>
    <string name="number">phone number</string>
    <string name="edit">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="Delete">Delete Account</string>
    <string name="name">Name :</string>
    <string name="email0">Email :</string>
    <string name="phone">078 725 3276</string>
    <string name="phone_number01">Phone Number :</string>
    <string name="mail">maheesha22@gmail.com</string>
    <string name="save_changes">Save Changes</string>
    <string name="request">Request for Ambulance</string>
    <string name="your_current_location">Your Current Location</string>
    <string name="reason">Reason for Request</string>
    <string name="register">Register</string>
    <string name="hospitale_details">Hospitale Details</string>
    <string name="emerency">Emergency</string>
    <string name="name1">Name</string>
    <string name="search_results">Search results</string>
    <string name="address01">Address :</string>
    <string name="todo">TODO</string>
    <string name="your_profile">Your Profile</string>
    <string name="please_wait">please wait</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_find_hospital">FindHospital</string>
    <string name="google_maps_key">AIzaSyCVYxOUmTH1Jq_lCNdgjUFvjgousdQe1eE</string>
    <string name="use_current_location">use current location</string>
</resources>