<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Profile">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-69dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        app:backgroundTint="@color/logo"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/font01"
        android:text="@string/app_name"
        android:textColor="@color/logo"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="391dp"
        android:layout_height="447dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:text="@string/name"
                android:textColor="@color/input"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/displayName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:textColor="@color/input"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:text="@string/email0"
                android:textColor="@color/input"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/displayEmail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:textColor="@color/input"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/profilePhone"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:text="@string/phone_number01"
                android:textColor="@color/input"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/displaypPhone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:textColor="@color/input"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/profilAddress"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:text="@string/address01"
                android:textColor="@color/input"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/displayAddress"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:textColor="@color/input"
                android:textSize="20sp" />

        </LinearLayout>


        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/font01"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/DeleteButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/font01"
            android:text="@string/Delete"
            android:textColor="@color/white"
            android:textSize="25sp" />


        <Button
            android:id="@+id/logoutButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/font01"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="25sp"
             />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font01"
        android:text="@string/your_profile"
        android:textColor="@color/input"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287"
        tools:ignore="VisualLintOverlap" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintCircleRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.518"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/user02" />

</androidx.constraintlayout.widget.ConstraintLayout>