<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:backgroundTintMode="src_over"
    tools:context=".Register">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="372dp"
        android:layout_height="146dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/font01"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/logo"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="445dp"
        android:background="@drawable/gradient"
        android:backgroundTint="@color/transparent"
        android:backgroundTintMode="multiply"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/EmailAddress"
                android:layout_width="305dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/input"
                tools:layout_editor_absoluteX="118dp"
                tools:layout_editor_absoluteY="378dp"
                android:textCursorDrawable="@color/black"/>

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/input"
                tools:layout_editor_absoluteX="118dp"
                tools:layout_editor_absoluteY="445dp"
                android:textCursorDrawable="@color/black"/>

            <EditText
                android:id="@+id/conPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/input"
                tools:layout_editor_absoluteX="118dp"
                tools:layout_editor_absoluteY="548dp"
                android:textCursorDrawable="@color/black"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/btn"
                android:fontFamily="@font/font01"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:fontFamily="@font/font01"
                android:text="@string/login"
                android:textColor="@color/input"
                android:textSize="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>