<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Editprofile"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-25dp">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/font01"
        android:text="@string/app_name"
        android:textColor="@color/logo"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"

        android:layout_marginEnd="-69dp"
        android:clickable="true"
        android:contentDescription="TODO"
        app:backgroundTint="@color/logo"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/user02" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cam4"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/input"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/baseline_photo_camera_24" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font01"
        android:text="@string/edit_profile"
        android:textColor="@color/input"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.674" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView01"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/black"
        android:hint="@string/name1"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView03"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/black"
        android:hint="@string/address"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/autoCompleteTextView04"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView01" />


    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView04"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:layout_marginBottom="71dp"
        android:backgroundTint="@color/black"
        android:hint="@string/number"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="255dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/btn"
        android:fontFamily="@font/font01"
        android:text="@string/save_changes"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView03"
        app:layout_constraintVertical_bias="0.754"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>