<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:backgroundTintMode="src_over"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:backgroundTint="@color/transparent"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTintMode="src_over"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/email"
                android:layout_width="274dp"
                android:layout_height="64dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/black"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/input"
                android:textCursorDrawable="@color/black"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="password"
                android:backgroundTint="@color/black"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/input"
                android:textCursorDrawable="@color/black"/>

            <Button
                android:id="@+id/button"
                android:layout_width="230dp"
                android:layout_height="77dp"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/btn"
                android:fontFamily="@font/font01"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/textReg"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:contextClickable="true"
                android:fontFamily="@font/font01"
                android:text="@string/line01"
                android:textAlignment="center"
                android:textColor="@color/link"
                android:textSize="18dp"
                tools:ignore="TextSizeCheck" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="351dp"
        android:layout_height="122dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/font01"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/logo"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>