<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Details">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="139dp"
        android:layout_height="131dp"
        android:layout_marginBottom="640dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/hospital" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="399dp"
        android:layout_height="355dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472">


        <Button
            android:id="@+id/locationButton"
            android:layout_width="346dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/btn"
            android:clickable="true"
            android:fontFamily="@font/font01"
            android:text="@string/use_current_location"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/hospitalName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:text="@string/hospital_name"
            android:textColor="@color/input"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hospitalAddress"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/address"
            android:textColor="@color/input"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/hospitalPhone"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/phone_number"
            android:textColor="@color/input"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/font01"
        android:text="Quick Care"
        android:textColor="@color/logo"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-69dp"

        android:clickable="true"
        android:contentDescription="TODO"
        app:backgroundTint="@color/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="137dp"
        android:layout_height="89dp"
        android:fontFamily="@font/font01"
        android:text="@string/hospitale_details"
        android:textColor="@color/input"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />



</androidx.constraintlayout.widget.ConstraintLayout>